--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </section1>
   
  <nav class="section2">	 
- <a href='https://livingroomcoffee.tk/' target='menu'><img src='https://s17.postimg.org/wfw2qlpnj/menu.jpg' border='0' alt='menu'/></a>
+ <a href="https://kasamanun.github.io/menu.github.io/"><img src='https://s17.postimg.org/wfw2qlpnj/menu.jpg' border='0' alt='menu'/></a>
    
-<a href='https://livingroomcoffee.tk/' target='livingroom'><img src='https://s17.postimg.org/s6rcoi6zj/livingroom.jpg' border='0' alt='livingroom'/></a>
+<a href="https://kasamanun.github.io/livingroom.github.io/"><img src='https://s17.postimg.org/s6rcoi6zj/livingroom.jpg' border='0' alt='livingroom'/></a>
    
-<a href='https://livingroomcoffee.tk/' target='contactus'><img src='https://s17.postimg.org/ed2zzhoov/contactus.jpg' border='0' alt='contactus'/></a>
+<a href="https://kasamanun.github.io/contactus.github.io/"><img src='https://s17.postimg.org/ed2zzhoov/contactus.jpg' border='0' alt='contactus'/></a>
    
 <a href="https://kasamanun.github.io/aboutus.github.io/"><img src='https://s17.postimg.org/cla14lshb/aboutus.jpg' border='0' alt='aboutus'/></a>
    
