--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
+  <meta charset="UTF-8">
+  <title>contactinfo.html</title>
+  
+  
+  <link rel='stylesheet prefetch' href='https://kasamanun.github.io/livingroomcoffee.github.io/style.css'>
+<link rel='stylesheet prefetch' href='css/eeawvp.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <head>
 <nav class='main'> 
 
     <ul>
@@ -29,7 +47,7 @@
     </ul>
   </nav></head>
   <dody>
-    <nav class="section1">  
+    <nav class="section1">	
    <img src='https://s17.postimg.org/lpef4ziun/contactinfo.jpg' border='0' alt='contactinfo'/></a>
     
     </section1>
@@ -61,3 +79,9 @@
     </nav>
   </footer>
 </div>
+  
+  
+
+</body>
+
+</html>
