--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <a href="contact.html"><img src='https://s17.postimg.org/71rgh06kv/contact.jpg' border='0' alt='contact'/></a>
      
 <a href="about.html"><img src='https://s17.postimg.org/i1cnsjk4f/about.jpg' border='0' alt='about'/></a>
-  </section2></div></nav>
+  </section2>
   
 
   <footer>
