--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <div class="imgContainer">
   
     <nav class="section1">	
-<img src='https://s17.postimg.org/cla14lshb/aboutus.jpg' border='0' alt='aboutus'/></a></imgContainer>
+<a href="about.html"><img src='https://s17.postimg.org/i1cnsjk4f/about.jpg' border='0' alt='about'/></a></imgContainer>
 </section1>
   
   <nav class="section2">	
