--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
   
 <nav class="section1">	
   
-<img src='https://s17.postimg.org/ed2zzhoov/contactus.jpg' border='0' alt='contactus'/></a></imgContainer></section1>
+<a href="contact.html"><img src='https://s17.postimg.org/71rgh06kv/contact.jpg' border='0' alt='contact'/></a></imgContainer></section1>
   
   <nav class="section2">	
 
