--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,25 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>LivingRoom Coffee Home</title>
+  <title>contact.html</title>
+  
+  
+  <link rel='stylesheet prefetch' href='https://kasamanun.github.io/livingroomcoffee.github.io/style.css'>
+<link rel='stylesheet prefetch' href='css/nypvaj.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Contact</title>
   
   
   <link rel='stylesheet prefetch' href='https://kasamanun.github.io/livingroomcoffee.github.io/style.css'>
@@ -19,7 +37,7 @@
   <!doctype html>
 <html lang="en">
 
-  <title>LivingRoom Coffee Home</title>
+  <title>Contact</title>
   
       <link href="https://fonts.googleapis.com/css?family=Chelsea+Market|Walter+Turncoat" rel="stylesheet">
 
@@ -40,7 +58,7 @@
       <li><a href="about.html" style= "padding-left:55px">ABOUT</a></li>
 
       <li><a href="contact.html" style= "padding-left:55px">CONTACT</a></li>
-     
+      
     </ul>
   </nav>
   
@@ -48,7 +66,9 @@
   
 <nav class="section1">	
   
-<a href="contact.html"><img src='https://s17.postimg.org/71rgh06kv/contact.jpg' border='0' alt='contact'/></a></imgContainer></section1>
+<img src='https://s17.postimg.org/71rgh06kv/contact.jpg' border='0' alt='contact'/>
+  
+  </imgContainer></section1>
   
   <nav class="section2">	
 
