--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
   
   <nav class="section2">	
 
-<a href="contactinfo.html"><img src='https://s17.postimg.org/lpef4ziun/contactinfo.jpg' border='0' alt='contactinfo'/></a>
+<a href="contactus.html"><img src='https://s17.postimg.org/lpef4ziun/contactinfo.jpg' border='0' alt='contactinfo'/></a>
     
     
     <a href="map.html"><img src='https://s17.postimg.org/p5y3p4tkf/map1.jpg' border='0' alt='map1'/></a>
