--- a/index.html
+++ b/index.html
@@ -1,48 +1,15 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>LivingRoom Coffee Home</title>
-  
-  
-  <link rel='stylesheet prefetch' href='https://kasamanun.github.io/livingroomcoffee.github.io/style.css'>
-<link rel='stylesheet prefetch' href='css/jznlyv.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>LivingRoom Coffee Home</title>
-  
-  
-  <link rel='stylesheet prefetch' href='https://kasamanun.github.io/livingroomcoffee.github.io/style.css'>
-<link rel='stylesheet prefetch' href='css/jznlyv.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  <!doctype html>
+<!doctype html>
 <html lang="en">
-
+<head>
   <title>LivingRoom Coffee Home</title>
   
       <link href="https://fonts.googleapis.com/css?family=Chelsea+Market|Walter+Turncoat" rel="stylesheet">
 
-<nav class='main'> 
 
+  </head>
+  
+  <nav class='main'> 
+  <body>
     <ul>
       
    <li><a href="index.html"><img id="logo" src='https://s17.postimg.org/z6cr9p5bz/Living_Room_Coffee_Logo1.png' border='0' alt='Living_Room_Coffee_Logo1'style="border:0;width:70px; height:auto;"/></a></li>
@@ -76,7 +43,7 @@
 <a href="contact.html"><img src='https://s17.postimg.org/71rgh06kv/contact.jpg' border='0' alt='contact'/></a>
      
 <a href="about.html"><img src='https://s17.postimg.org/i1cnsjk4f/about.jpg' border='0' alt='about'/></a>
-  </section2></div></nav>
+  </section2></div>
   
 
   <footer>
@@ -100,9 +67,4 @@
 </body>
 
 </html>
-  
-  
 
-</body>
-
-</html>
