--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,15 @@
 </head>
 
 <body>
-
+<head>
   <!doctype html>
 <html lang="en">
 
   <title>Contact</title>
   
       <link href="https://fonts.googleapis.com/css?family=Chelsea+Market|Walter+Turncoat" rel="stylesheet">
-
+</head>
+  
 <nav class='main'> 
 
     <ul>
@@ -72,7 +73,7 @@
   
   <nav class="section2">	
 
-<a href="contactus.html"><img src='https://s17.postimg.org/lpef4ziun/contactinfo.jpg' border='0' alt='contactinfo'/></a>
+<a href="contactus.html"><img src='https://s18.postimg.cc/6wd6h7sgp/contactus.jpg' border='0' alt='contactus'/></a></a>
     
     
     <a href="map.html"><img src='https://s17.postimg.org/p5y3p4tkf/map1.jpg' border='0' alt='map1'/></a>
